--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pm2-probe",
-  "version": "1.4.0",
-  "description": "",
+  "version": "1.5.1",
+  "description": "PM2 Monitoring Probe",
   "main": "probe.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
